--- a/E-Techno/index.html
+++ b/E-Techno/index.html
@@ -18,8 +18,7 @@
             <div class="header__inner">
                 <img class="header__logo" src="images/logo.png">
                 <h1 class="header__title">
-                    Товарный чек <br>
-                    Гарантийный талон
+                    Товарный чек
                 </h1>
             </div>
         </header>
