--- a/MediaCopy/catalog.html
+++ b/MediaCopy/catalog.html
@@ -46,6 +46,7 @@
                             <span></span>
                         </a>
                         <a class="menu__lang" href="">
+                            <img class="menu__flag" src="images/russia-flag.png">
                             RU
                         </a>
                     </nav>
