--- a/Provider/index.html
+++ b/Provider/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<header class='header'>
+	<!-- <header class='header'>
 		<div class='container'>
 			<div class='header__wrapper'>
 				<div class='header__top'>
@@ -85,92 +85,8 @@
 					</li>
 				</ul>
 		</div>
-	</header>
+	</header> -->
 	<main class='main home'>
-		<section class='home__banner'>
-			<div class='container'>
-				<div class='home__banner-wrapper'>
-					<div class='home__banner-fill'>
-						<p class='home__banner-suptitle'>
-							Домашний интернет от <span>Лутаком</span>
-						</p>
-						<h1 class='home__banner-title'>
-							Интернет, каким он должен быть
-						</h1>
-						<p class='home__banner-subtitle'>
-							Высокая скорость, стабильное подключение, круглосуточная
-							поддержка и выгодные цены
-						</p>
-						<div class='home__banner-box'>
-							<div class='home__banner-range'>
-								<h3 class='home__banner-range-title'>
-									Какая скорость интернета Вам нужна?
-								</h3>
-								<div class='home__banner-range-slider'>
-									<input type="range" min="1" max="5" step="1" value="1">
-								</div>
-								<p class='home__banner-range-text'>
-									Скачивайте до <span>10 Гб за 2 часа</span>
-								</p>
-							</div>
-							<div class='home__banner-checkbox'>
-								<div class="home__banner-checkbox-input">
-									<label class="control control--checkbox">
-										<input type="checkbox" />
-										<div class="control__indicator"></div>
-									</label>
-								</div>
-								<span class='home__banner-checkbox-text'>
-									А еще мне нужны ТВ-каналы
-								</span>
-							</div>
-							<div class='home__banner-box-bottom'>
-								<a class='home__banner-btn red-btn'>
-									Подключить
-								</a>
-								<a class='home__banner-call'>
-									<img src='images/banner-call.png' />
-								</a>
-							</div>
-						</div>
-						<div class='home__banner-bottom'>
-							Наши тарифы — это выгодные комплекты, в которые входят интернет и телеканалы. Всё вместе выходит гораздо дешевле, чем по отдельности.
-						</div>
-					</div>
-					<div class='home__banner-info'>
-						<a class='home__banner-info-item'>
-							<img src='images/banner-telegram.png' />
-						</a>
-						<a class='home__banner-info-item'>
-							<img src='images/banner-youtube.png' />
-						</a>
-						<a class='home__banner-info-item'>
-							<img src='images/banner-tiktok.png' />
-						</a>
-						<a class='home__banner-info-item'>
-							<img src='images/banner-wk.png' />
-						</a>
-						<a class='home__banner-info-item'>
-							<img src='images/banner-smart.png' />
-						</a>
-						<div class='home__banner-info-previews'>
-							<img src='' class='home__banner-info-preview' />
-							<img src='' class='home__banner-info-preview' />
-							<img src='' class='home__banner-info-preview' />
-							<img src='' class='home__banner-info-preview' />
-						</div>
-					</div>
-					<div class='home__banner-promotion'>
-						<img src='images/promotion-preview.png' />
-						<p class='home__banner-promotion-text'>
-							Приведи друга и
-							получи <span>1000 рублей</span>
-							на счет
-						</p>
-					</div>
-				</div>
-			</div>
-		</section>
 		<section class='home__tariff'>
 			<div class='container'>
 				<div class='home__tariff-wrapper'>
