--- a/Provider/index.html
+++ b/Provider/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<!-- <header class='header'>
+	<header class='header'>
 		<div class='container'>
 			<div class='header__wrapper'>
 				<div class='header__top'>
@@ -85,7 +85,7 @@
 					</li>
 				</ul>
 		</div>
-	</header> -->
+	</header>
 	<main class='main home'>
 		<section class='home__tariff'>
 			<div class='container'>
