--- a/Provider/index.html
+++ b/Provider/index.html
@@ -199,7 +199,9 @@
 						</div>
 					</div>
 					<div class='home__banner-promotion'>
-						<img src='images/promotion-preview.png' />
+						<div class="home__banner-promotion-thumbnail">
+							<img src='images/promotion-preview.png' />
+						</div>
 						<p class='home__banner-promotion-text'>
 							Приведи друга и
 							получи <span>1000 рублей</span>
