--- a/Provider/about.html
+++ b/Provider/about.html
@@ -22,7 +22,7 @@
 			<div class='header__wrapper'>
 				<div class='header__top'>
 					<ul class='header__top-list'>
-						<li class='header__top-item'>
+						<li class='header__top-item active'>
 							<a class='header__top-link' href='about.html'>
 								<img src='images/header/about.png' />
 								О компании
@@ -54,7 +54,7 @@
 					</a>
 					<nav class='menu'>
 						<ul class='menu__list'>
-							<li class='menu__list-item'><a class='menu__item-link partner-open' href='#'>Партнерам</a></li>
+							<li class='menu__list-item'><a class='menu__item-link partner-open active' href='#'>Партнерам</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Новости</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Файлы</a></li>
