--- a/Provider/index.html
+++ b/Provider/index.html
@@ -29,7 +29,7 @@
 								О компании
 							</a>
 						</li>
-						<li class='header__top-item'>
+						<li class='header__top-item active'>
 							<a class='header__top-link' href='index.html'>
 								<img src='images/header/private-individuals.png' />
 								Частным лицам
