--- a/Provider/digital-tv.html
+++ b/Provider/digital-tv.html
@@ -27,7 +27,7 @@
 								О компании
 							</a>
 						</li>
-						<li class='header__top-item'>
+						<li class='header__top-item active'>
 							<a class='header__top-link' href='index.html'>
 								<img src='images/header/private-individuals.png' />
 								Частным лицам
@@ -54,7 +54,7 @@
 					<nav class='menu'>
 						<ul class='menu__list'>
 							<li class='menu__list-item'><a class='menu__item-link' href='tariff.html'>Интернет</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Цифровое TV</a></li>
+							<li class='menu__list-item active'><a class='menu__item-link' href='#'>Цифровое TV</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Способ оплаты</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Интересное</a></li>
