--- a/Provider/tariff.html
+++ b/Provider/tariff.html
@@ -70,7 +70,7 @@
 	</header>
 	<main class='main tariff-main'>
 		<section class='plans'>
-			<div class='small-container'>
+			<div class='medium-container'>
 				<div class='plans__wrapper'>
 					<h2 class='plans_title'>ТАРИФНЫЕ ПЛАНЫ</h2>
 					<div class='plans__fill'>
