--- a/Provider/about.html
+++ b/Provider/about.html
@@ -425,7 +425,7 @@
 							</h3>
 							<ul class='footer__col-list'>
 								<li class='footer__col-item'>
-									<a class='footer__col-link'>Интернет</a>
+									<a class='footer__col-link' href="tariff.html">Интернет</a>
 								</li>
 								<li class='footer__col-item'>
 									<a class='footer__col-link'>Подключиться</a>
@@ -434,7 +434,7 @@
 									<a class='footer__col-link'>Способы оплаты</a>
 								</li>
 								<li class='footer__col-item'>
-									<a class='footer__col-link'>Цифровое TV</a>
+									<a class='footer__col-link' href="digital-tv.html">Цифровое TV</a>
 								</li>
 								<li class='footer__col-item'>
 									<a class='footer__col-link'>Интересное</a>
