--- a/Provider/tariff.html
+++ b/Provider/tariff.html
@@ -54,7 +54,7 @@
 					<nav class='menu'>
 						<ul class='menu__list'>
 							<li class='menu__list-item active'><a class='menu__item-link' href='tariff.html'>Интернет</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Цифровое TV</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='digital-tv.html'>Цифровое TV</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Способ оплаты</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Интересное</a></li>
