--- a/Provider/digital-tv.html
+++ b/Provider/digital-tv.html
@@ -168,7 +168,7 @@
 									</div>
 									<div class='digital__preview-slide-info'>
 										<p>
-											ПК, Ноутбуки 
+											ПК, Ноутбуки <br />
 											и ТВ-приставки
 										</p>
 									</div>
