--- a/Provider/about.html
+++ b/Provider/about.html
@@ -54,10 +54,10 @@
 					</a>
 					<nav class='menu'>
 						<ul class='menu__list'>
-							<li class='menu__list-item'><a class='menu__item-link partner-open active' href='#'>Партнерам</a></li>
+							<li class='menu__list-item'><a class='menu__item-link partner-open' href='#'>Партнерам</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Новости</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Файлы</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='faq.html'>FAQ</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='memo.html'>Файлы</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Вакансии</a></li>
 						</ul>
 						<ul class='auth__list about-auth__list'>
@@ -337,23 +337,21 @@
 			</div>
 		</section>
 	</main>
-	<div class='partner'>
-		<div class='partner__wrapper'>
-			<div class='partner__fill'>
-				<div class='partner__preview'>
-					<img src='images/popup/partner.png' />
-				</div>
-				<div class='partner__info'>
-					<h3 class='partner__title'>
+	<div class='partner popup'>
+		<div class='partner__wrapper popup__wrapper'>
+			<div class='partner__fill popup__fill'>
+				<img class='partner__preview popup__preview' src='images/popup/partner.png' />
+				<div class='partner__info popup__info'>
+					<h3 class='partner__title popup__title'>
 						ПАРТНЕРАМ
 					</h3>
-					<p class='partner__text'>
+					<p class='partner__text popup__text'>
 						Lutacom открыт для взаимодействия с поставщиками оборудования и услуг. Сотрудничество с нашей компанией обеспечит Вам регулярные объемы заказов. При этом мы предъявляем самые высокие требования к нашим партнерам. Если ваша компания является гарантом качества, четкого сервиса и представляет конкурентное предложение - мы открыты к взаимовыгодному партнерству!
 					</p>
-					<a class='partner__btn' href='#'>СВЯЗАТЬСЯ С НАМИ</a>
+					<a class='partner__btn popup__btn' href='#'>СВЯЗАТЬСЯ С НАМИ</a>
 				</div>
 			</div>
-			<a class='partner-close' href='#'>
+			<a class='partner-close popup-close' href='#'>
 				<img src='images/icons/close-red.png' />
 			</a>
 		</div>
@@ -425,7 +423,7 @@
 							</h3>
 							<ul class='footer__col-list'>
 								<li class='footer__col-item'>
-									<a class='footer__col-link' href="tariff.html">Интернет</a>
+									<a class='footer__col-link'>Интернет</a>
 								</li>
 								<li class='footer__col-item'>
 									<a class='footer__col-link'>Подключиться</a>
@@ -434,7 +432,7 @@
 									<a class='footer__col-link'>Способы оплаты</a>
 								</li>
 								<li class='footer__col-item'>
-									<a class='footer__col-link' href="digital-tv.html">Цифровое TV</a>
+									<a class='footer__col-link'>Цифровое TV</a>
 								</li>
 								<li class='footer__col-item'>
 									<a class='footer__col-link'>Интересное</a>
