--- a/Provider/digital-tv.html
+++ b/Provider/digital-tv.html
@@ -55,7 +55,8 @@
 						<ul class='menu__list'>
 							<li class='menu__list-item'><a class='menu__item-link' href='tariff.html'>Интернет</a></li>
 							<li class='menu__list-item active'><a class='menu__item-link' href='digital-tv.html'>Цифровое TV</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='faq.html'>FAQ</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='memo.html'>Файлы</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Способ оплаты</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Интересное</a></li>
 						</ul>
@@ -168,9 +169,9 @@
 									</div>
 									<div class='digital__preview-slide-info'>
 										<p>
-											ПК, Ноутбуки <br />
+											ПК, Ноутбуки 
 											и ТВ-приставки
-										</p>
+										
 									</div>
 								</div>
 							</div>
