--- a/Provider/index.html
+++ b/Provider/index.html
@@ -57,7 +57,8 @@
 						<ul class='menu__list'>
 							<li class='menu__list-item'><a class='menu__item-link' href='tariff.html'>Интернет</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='digital-tv.html'>Цифровое TV</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='faq.html'>FAQ</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='memo.html'>Файлы</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Способ оплаты</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Интересное</a></li>
 						</ul>
@@ -397,162 +398,12 @@
 										<a class='tariff__btn white-btn' href='#'>Подключить</a>
 									</div>
 								</div>
-								<div class='home__tariff-item tariff-item'>
-									<div class='tariff__fill'>
-										<div class='tariff__preview'>
-											<img src='images/tariff-1.png' />
-										</div>
-										<div class='tariff__info'>
-											<h3 class='tariff__title'>
-												MINI
-											</h3>
-											<ul class='tariff__options'>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скорость приема</span>
-													<span class='tariff__option-value'>10 Мбит/сек</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скачивайте до</span>
-													<span class='tariff__option-value'>10 Гб за 2 часа</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Телевидение</span>
-													<span class='tariff__option-value'>нет</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class='tariff__bottom'>
-										<span class='tariff__price'>200 &#8381;/мес.</span>
-										<a class='tariff__btn white-btn' href='#'>Подключить</a>
-									</div>
-								</div>
-								<div class='home__tariff-item tariff-item'>
-									<div class='tariff__fill'>
-										<div class='tariff__preview'>
-											<img src='images/tariff-2.png' />
-										</div>
-										<div class='tariff__info'>
-											<h3 class='tariff__title'>
-												SOCIAL
-											</h3>
-											<ul class='tariff__options'>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скорость приема</span>
-													<span class='tariff__option-value'>15 Мбит/сек</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скачивайте до</span>
-													<span class='tariff__option-value'>10 Гб за 1:30 часа</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Телевидение</span>
-													<span class='tariff__option-value'>нет</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class='tariff__bottom'>
-										<span class='tariff__price'>230 &#8381;/мес.</span>
-										<a class='tariff__btn white-btn' href='#'>Подключить</a>
-									</div>
-								</div>
-								<div class='home__tariff-item tariff-item'>
-									<div class='tariff__fill'>
-										<div class='tariff__preview'>
-											<img src='images/tariff-3.png' />
-										</div>
-										<div class='tariff__info'>
-											<h3 class='tariff__title'>
-												Домашний+ТВ
-											</h3>
-											<ul class='tariff__options'>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скорость приема</span>
-													<span class='tariff__option-value'>100 Мбит/сек</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скачивайте до</span>
-													<span class='tariff__option-value'>10 Гб за 15 минут</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Телевидение</span>
-													<span class='tariff__option-value'>190+ SD и HD каналов</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class='tariff__bottom'>
-										<span class='tariff__price'>400 &#8381;/мес.</span>
-										<a class='tariff__btn white-btn' href='#'>Подключить</a>
-									</div>
-								</div>
-								<div class='home__tariff-item tariff-item'>
-									<div class='tariff__fill'>
-										<div class='tariff__preview'>
-											<img src='images/tariff-4.png' />
-										</div>
-										<div class='tariff__info'>
-											<h3 class='tariff__title'>
-												Расширенный+ТВ*
-											</h3>
-											<ul class='tariff__options'>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скорость приема</span>
-													<span class='tariff__option-value'>200 Мбит/сек</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скачивайте до</span>
-													<span class='tariff__option-value'>10 Гб за 7 минут</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Телевидение</span>
-													<span class='tariff__option-value'>190+ SD и HD каналов</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class='tariff__bottom'>
-										<span class='tariff__price'>650 &#8381;/мес.</span>
-										<a class='tariff__btn white-btn' href='#'>Подключить</a>
-									</div>
-								</div>
-								<div class='home__tariff-item tariff-item'>
-									<div class='tariff__fill'>
-										<div class='tariff__preview'>
-											<img src='images/tariff-5.png' />
-										</div>
-										<div class='tariff__info'>
-											<h3 class='tariff__title'>
-												Полный+ТВ*
-											</h3>
-											<ul class='tariff__options'>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скорость приема</span>
-													<span class='tariff__option-value'>500 Мбит/сек</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Скачивайте до</span>
-													<span class='tariff__option-value'>10 Гб за 3 минуты</span>
-												</li>
-												<li class='tariff__option'>
-													<span class='tariff__option-label'>Телевидение</span>
-													<span class='tariff__option-value'>190+ SD и HD каналов</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class='tariff__bottom'>
-										<span class='tariff__price'>800 &#8381;/мес.</span>
-										<a class='tariff__btn white-btn' href='#'>Подключить</a>
-									</div>
-								</div>
 							</div>
 							<p class='home__tariff-description tariff-description'>
 								* - на сетях построенных по технологии <b>PON</b>
 							</p>
 							<div class='btn-box tariff-btn-box'>
-								<a class='home__tariff-more dark-btn tariff-more' href='#'>
+								<a class='home__tariff-more dark-btn tariff-more' href='tariff.html'>
 									Больше тарифов
 								</a>
 							</div>
@@ -1110,6 +961,27 @@
 			</div>
 		</section>
 	</main>
+	<div class='social'>
+		<div class='social__fill'>
+			<ul class='social__list'>
+				<li class='social__list-item'>
+					<a class='social__item-link' href='viber://chat?number=79591064193'>
+						<img src='images/social/viber.png' />
+					</a>
+				</li>
+				<li class='social__list-item'>
+					<a class='social__item-link' href='https://api.whatsapp.com/send?phone=79591064193'>
+						<img src='images/social/whatsapp.png' />
+					</a>
+				</li>
+				<li class='social__list-item'>
+					<a class='social__item-link' href='https://t.me/+79591064193'>
+						<img src='images/social/telegram.png' />
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<footer class='footer'>
 		<div class='container'>
 			<div class='footer__wrapper'>
