--- a/Provider/tariff.html
+++ b/Provider/tariff.html
@@ -55,7 +55,8 @@
 						<ul class='menu__list'>
 							<li class='menu__list-item active'><a class='menu__item-link' href='tariff.html'>Интернет</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='digital-tv.html'>Цифровое TV</a></li>
-							<li class='menu__list-item'><a class='menu__item-link' href='#'>Памятка</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='faq.html'>FAQ</a></li>
+							<li class='menu__list-item'><a class='menu__item-link' href='memo.html'>Файлы</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Способ оплаты</a></li>
 							<li class='menu__list-item'><a class='menu__item-link' href='#'>Интересное</a></li>
 						</ul>
@@ -393,11 +394,6 @@
 							<p class='tariff-description'>
 								* - на сетях построенных по технологии <b>PON</b>
 							</p>
-							<div class='btn-box tariff-btn-box'>
-								<a class='tariff-more dark-btn' href='#'>
-									Больше тарифов
-								</a>
-							</div>
 						</div>
 					</div>
 				</div>
