--- a/website/index.html
+++ b/website/index.html
@@ -60,12 +60,7 @@
 
                     <div class="banner-info">
                         <div class='banner__video'>
-                            <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/HAq0EFoFk_o?si=Ju87G2tEwzo1D_im"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                            </iframe>
+                           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8RyvYRQMMs4?si=2_NBuheYdv-2C-ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
 
                         <div class="variants">
